# tauri-cef

./: Cargo.toml  Makefile  README.md  package.json  rustfmt.toml
.cargo/: audit.toml
.changes/: config.json  include-stderr-error.md
.github/workflows/: audit.yml  bench.yml  check-change-tags.yml  check-generated-files.yml  check-license-header.yml  covector-status.yml  covector-version-or-publish.yml  deploy-schema-worker.yml  docker.yml  fmt.yml  lint-js.yml  lint-rust.yml  publish-cli-js.yml  publish-cli-rs.yml  supply-chain.yml  test-android.yml  test-cli-js.yml  test-cli-rs.yml  test-core.yml  udeps.yml
bench/: Cargo.toml
bench/src/: run_benchmark.rs  utils.rs
bench/tests/cpu_intensive/src-tauri/: Cargo.toml
bench/tests/cpu_intensive/src-tauri/src/: main.rs
bench/tests/files_transfer/src-tauri/: Cargo.toml
bench/tests/files_transfer/src-tauri/src/: main.rs
bench/tests/helloworld/src-tauri/: Cargo.toml
bench/tests/helloworld/src-tauri/src/: main.rs
cef-helper/: Cargo.toml
cef-helper/src/: main.rs  notification.rs
crates/tauri/: Cargo.toml  build.rs
crates/tauri-build/: Cargo.toml
crates/tauri-build/src/: acl.rs  lib.rs  manifest.rs  windows-cef-app-manifest.xml
crates/tauri-build/src/codegen/: context.rs
crates/tauri-bundler/: Cargo.toml  build.rs
crates/tauri-bundler/src/: bundle.rs  error.rs
crates/tauri-bundler/src/bundle/: platform.rs  settings.rs  updater_bundle.rs
crates/tauri-bundler/src/bundle/kmp/: mod.rs
crates/tauri-bundler/src/utils/: http_utils.rs  mod.rs
crates/tauri-cli/: Cargo.toml  build.rs
crates/tauri-cli/src/: add.rs  build.rs  bundle.rs  completions.rs  dev.rs  icon.rs  init.rs  lib.rs  remove.rs
crates/tauri-cli/src/cef/: macos_dev.rs  mod.rs
crates/tauri-cli/src/dev/: builtin_dev_server.rs
crates/tauri-cli/src/helpers/: app_paths.rs  config.rs  flock.rs  fs.rs  http.rs  mod.rs  pbxproj.rs  prompts.rs  template.rs  updater_signature.rs
crates/tauri-cli/src/info/: app.rs  mod.rs  packages_nodejs.rs  packages_rust.rs  plugins.rs
crates/tauri-cli/src/interface/: mod.rs  rust.rs
crates/tauri-cli/src/migrate/: mod.rs
crates/tauri-cli/src/mobile/: init.rs  mod.rs
crates/tauri-cli/src/plugin/: android.rs  init.rs  ios.rs  mod.rs  new.rs
crates/tauri-cli/src/signer/: generate.rs  sign.rs
crates/tauri-cli/templates/plugin/: Cargo.crate-manifest
crates/tauri-codegen/src/: context.rs  embedded_assets.rs  image.rs  lib.rs
crates/tauri-driver/: Cargo.toml
crates/tauri-driver/src/: server.rs
crates/tauri-macos-sign/: Cargo.toml
crates/tauri-macos-sign/src/: keychain.rs
crates/tauri-macos-sign/src/keychain/: identity.rs
crates/tauri-macros/src/: cef.rs  context.rs  lib.rs  menu.rs  mobile.rs  runtime.rs
crates/tauri-macros/src/command/: handler.rs  wrapper.rs
crates/tauri-plugin/: Cargo.toml
crates/tauri-runtime/: Cargo.toml
crates/tauri-runtime-cef/: Cargo.toml
crates/tauri-runtime-cef/src/: audio.rs  cef_impl.rs  cef_webview.rs  lib.rs  notification.rs  permissions.rs
crates/tauri-runtime-cef/src/cef_impl/: request_handler.rs
crates/tauri-runtime-cef/src/cef_webview/: macos.rs  windows.rs
crates/tauri-runtime-wry/: Cargo.toml
crates/tauri-runtime-wry/src/: lib.rs  undecorated_resizing.rs  util.rs
crates/tauri-runtime-wry/src/dialog/: windows.rs
crates/tauri-runtime-wry/src/window/: windows.rs
crates/tauri-runtime/src/: lib.rs  webview.rs  window.rs
crates/tauri-schema-generator/: Cargo.toml  build.rs
crates/tauri-schema-generator/schemas/: capability.schema.json  config.schema.json  permission.schema.json  scope.schema.json
crates/tauri-schema-worker/: Cargo.toml
crates/tauri-schema-worker/src/: config.rs  lib.rs
crates/tauri-utils/: Cargo.toml
crates/tauri-utils/src/: build.rs  config.rs  html.rs  lib.rs  platform.rs  resources.rs  tokens.rs
crates/tauri-utils/src/acl/: build.rs  capability.rs  identifier.rs  manifest.rs  mod.rs  resolved.rs  schema.rs  value.rs
crates/tauri-utils/src/config_v1/: mod.rs
crates/tauri-utils/src/pattern/: isolation.rs
crates/tauri-utils/src/platform/: starting_binary.rs
crates/tauri/scripts/: core.js
crates/tauri/src/: app.rs  async_runtime.rs  ios.rs  lib.rs  pattern.rs  plugin.rs  process.rs  state.rs
crates/tauri/src/app/: plugin.rs
crates/tauri/src/event/: listener.rs  mod.rs  plugin.rs
crates/tauri/src/image/: plugin.rs
crates/tauri/src/ipc/: authority.rs  capability_builder.rs  channel.rs  command.rs  mod.rs  protocol.rs
crates/tauri/src/manager/: menu.rs  mod.rs  tray.rs  webview.rs  window.rs
crates/tauri/src/menu/: check.rs  icon.rs  menu.rs  mod.rs  normal.rs  plugin.rs  predefined.rs  submenu.rs
crates/tauri/src/path/: android.rs  mod.rs  plugin.rs
crates/tauri/src/plugin/: mobile.rs
crates/tauri/src/protocol/: asset.rs  isolation.rs  tauri.rs
crates/tauri/src/resources/: mod.rs  plugin.rs
crates/tauri/src/scope/: fs.rs
crates/tauri/src/test/: mock_runtime.rs  mod.rs
crates/tauri/src/tray/: mod.rs  plugin.rs
crates/tauri/src/webview/: mod.rs  plugin.rs  webview_window.rs
crates/tauri/src/window/: mod.rs  plugin.rs
crates/tests/restart/: Cargo.toml
examples/api/src-tauri/: Cargo.toml  tauri.conf.json
examples/api/src-tauri/src/: lib.rs  menu_plugin.rs  tray.rs
examples/api/src-tauri/tauri-plugin-sample/: Cargo.toml
examples/api/src-tauri/tauri-plugin-sample/src/: desktop.rs  lib.rs  mobile.rs
examples/commands/: commands.rs  main.rs  tauri.conf.json
examples/drag/: main.rs
examples/file-associations/src-tauri/: Cargo.toml
examples/file-associations/src-tauri/src/: main.rs
examples/helloworld/: index.html  main.rs
examples/isolation/: main.rs  tauri.conf.json
examples/multiwebview/: main.rs  tauri.conf.json
examples/multiwindow/: main.rs  tauri.conf.json
examples/resources/src-tauri/: Cargo.toml
examples/resources/src-tauri/src/: main.rs
examples/run-return/: main.rs  tauri.conf.json
examples/splashscreen/: main.rs  tauri.conf.json
examples/state/: main.rs  tauri.conf.json
examples/streaming/: main.rs  tauri.conf.json
(+52 files in other folders)
