[package]
name = "tauri-cef-helper"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
cef = { version = "=146.4.1", default-features = false }
# Not actually used directly, just locking it.
cef-dll-sys = { version = "=146.4.1", default-features = false }

[features]
default = ["sandbox"]
# Mirrors `tauri-runtime-cef` default feature to enable CEF sandbox support on macOS.
sandbox = ["cef/sandbox"]

# Ensure this crate is NOT treated as part of the repo workspace.
[workspace]
