[package]
name = "tauri-macos-sign"
version = "2.3.3"
authors = ["Tauri Programme within The Commons Conservancy"]
license = "Apache-2.0 OR MIT"
keywords = ["codesign", "signing", "macos", "ios", "tauri"]
repository = "https://github.com/tauri-apps/tauri"
description = "Code signing utilities for macOS and iOS apps"
edition = "2024"
rust-version = "1.88"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
x509-certificate = "0.24"
once_cell = "1"
regex = "1"
os_pipe = "1"
plist = "1"
rand = "0.9"
dirs = "6"
log = { version = "0.4.21", features = ["kv"] }
apple-codesign = { version = "0.29", default-features = false }
chrono = "0.4"
p12 = "0.6"
base64 = "0.22"
