[package]
name = "tauri-runtime-cef"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
dioxus-debug-cell = "0.1"
tauri-runtime = { version = "2.9.2", path = "../tauri-runtime" }
tauri-utils = { version = "2.8.0", path = "../tauri-utils", features = [
  "html-manipulation",
] }
html5ever = "0.29"
raw-window-handle = "0.6"
url = "2"
http = "1"
cef = { version = "=146.4.1", default-features = false }
# Not actually used directly, just locking it.
cef-dll-sys = "=146.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kuchiki = { package = "kuchikiki", version = "0.8.8-speedreader" }
sha2 = "0.10"
base64 = "0.22"
dirs = "6"
log = "0.4"

[target."cfg(windows)".dependencies]
windows = { version = "0.61", features = [
  "Win32_Graphics",
  "Win32_Graphics_Gdi",
  "Win32_UI_HiDpi",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_LibraryLoader",
] }

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [] }
objc2-foundation = { version = "0.3", features = ["NSNotification"] }

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
x11-dl = "2.21"

[features]
default = ["sandbox"]
devtools = []
macos-private-api = ["tauri-runtime/macos-private-api"]
sandbox = ["cef/sandbox"]
