[package]
name = "tauri-schema-generator"
version = "0.0.0"
edition = "2024"
publish = false

[build-dependencies]
tauri-utils = { features = ["schema"], path = "../tauri-utils" }
schemars = { version = "1", features = ["url2", "preserve_order"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }
