[package]
name = "api"
version = "0.1.0"
description = "An example Tauri Application showcasing the api"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MIT"

[lib]
name = "api_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { path = "../../../crates/tauri-build", features = [
  "codegen",
  "isolation",
] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tiny_http = "0.11"
log = "0.4.21"
tauri-plugin-sample = { path = "./tauri-plugin-sample/" }
tauri-plugin-log = "2"

[dependencies.tauri]
path = "../../../crates/tauri"
default-features = false
features = [
  "protocol-asset",
  "image-ico",
  "image-png",
  "isolation",
  "tray-icon",
]

[dev-dependencies.tauri]
path = "../../../crates/tauri"
default-features = false
features = ["test"]

[features]
default = ["wry"]
wry = ["tauri/wry"]
prod = ["tauri/custom-protocol"]
cef = ["tauri/cef"]
