[package]
name = "tauri-plugin-sample"
version = "0.1.0"
edition = "2024"
links = "tauri-plugin-sample"

[dependencies]
tauri = { path = "../../../../crates/tauri", default-features = false }
log = "0.4"
serde = "1"
thiserror = "2"

[build-dependencies]
tauri-plugin = { path = "../../../../crates/tauri-plugin", features = [
  "build",
] }
